--- a/styles.css
+++ b/styles.css
@@ -916,5 +916,32 @@ footer {
     font-size: 1.05rem;
   }
 
+/* Case study section spacing */
+  .cs-section {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
 
+  .cs-subsection {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
+/* Image spacing */
+  .cs-figure {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+/* Normalize case study image widths */
+  .cs-figure img {
+    width: 100%;
+    max-width: 1100px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .cs-section > .cs-subsection:first-child {
+    margin-top: 0;
+  }
 
